# loan-prediction

./: .Dockerignore  .gitignore  .pep8rc  .pylintrc  Dockerfile  Procfile  config.py  docker-compose.yml  heroku.yml  mypy.ini  pyproject.toml  readme.md  requirements.txt  step_1_datavisualization.py  visualization.test.py
.github/workflows/: test.yml  update_requirement_file.yml
LoanPrediction/: config.py  main.py
LoanPrediction/application/: app.py
LoanPrediction/application/depends/: cookies.py
LoanPrediction/application/requests/: predict_data.py
LoanPrediction/application/responses/: __init__.py  exception.py
LoanPrediction/application/routes/: analysis.py  predict.py  routes.py  session.py
LoanPrediction/infrastructure/: sessions.py
ModalTraining/: data_modification.py  training.py
ModalTraining/sklearn_modals/: LR_modal.py
ModelTraining/: data_modification.py  training.py
ModelTraining/intermediary_files/: csv_normalized.csv
ModelTraining/sklearn_models/: LR_model.py
core/Entity/: graph.py
core/Service/: visualization.py
loanprediction/: config.py  main.py
loanprediction/application/: app.py  response.py
loanprediction/infrastructure/: sessions.py
modal/: LR_modal.py  data_modification.py  modal.pskl  train_.csv  training.py
modal/datas/: test_.csv
modal/intermediary_files/: csv_drop_index.csv  csv_drop_unnecessary_col.csv  csv_filled_null.csv  csv_label_encoded.csv
scripts/: build.py  dev.py  export.py  test.py
tests/: test_LR_DataTransformer.py  visualization_test.py
tests/services/: test_estimator.py
(+34 files in other folders)
