[tool.poetry]
name = "LoanPrediction"
version = "0.1.0"
description = ""
authors = ["yeaung"]
license = "MITOpenSource"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'tests.visualization:test'
start = 'loanprediction.main:main'
dev = 'loanprediction.main:dev'
